tests/baselines/reference/parserExportAssignment5.errors.txt
tests/cases/conformance/parser/ecmascript5/ExportAssignments/parserExportAssignment5.ts(2,5): error TS1063: An export assignment cannot be used in an internal module.
tests/cases/conformance/parser/ecmascript5/ExportAssignments/parserExportAssignment5.ts(2,5): error TS2304: Cannot find name 'A'.


==== tests/cases/conformance/parser/ecmascript5/ExportAssignments/parserExportAssignment5.ts (2 errors) ====
    module M {
        export = A;
        ~~~~~~~~~~~
!!! error TS1063: An export assignment cannot be used in an internal module.
        ~~~~~~~~~~~
!!! error TS2304: Cannot find name 'A'.
    }